Closed Bug 1303534 Opened 8 years ago Closed 8 years ago

[PDF Viewer] Background of element not transparent anymore with hardware acceleration enabled

Categories

(Core :: Graphics, defect)

46 Branch
x86_64
Windows 7
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla52
Tracking Status
firefox48 --- wontfix
firefox49 - wontfix
firefox50 + fixed
firefox51 + fixed
firefox52 + verified

People

(Reporter: epinal99-bugzilla2, Assigned: bas.schouten)

References

Details

(Keywords: regression, Whiteboard: [mozfr-community])

Attachments

(3 files)

STR: open the attached PDF and see the orange insert at the bottom. Result: background of the decoration element around the insert is visible instead of being transparent. Disabling HWA fixes the issue. Regression range: https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=ca5142203259cd252723d34e75d3e3b799b21765&tochange=538d248fa252a4100082fd9bc3fdc08d322cda22 Bas Schouten — Bug 1258168: Push ClearType compatible clipping layers when the last pushed layer was marked as opaque. r=jrmuizel
Blocks: 1258168
Has Regression Range: --- → yes
Has STR: --- → yes
Flags: needinfo?(bas)
Keywords: regression
Version: 48 Branch → 46 Branch
Too late for a fix for 49. We could still possibly take a patch in 50. Ryan since you were looking at the other PDF.js update issue, just fyi we also have this regression.
Flags: needinfo?(ryanvm)
Component: PDF Viewer → Graphics: Layers
Flags: needinfo?(ryanvm) → in-testsuite?
Product: Firefox → Core
Assignee: nobody → bas
Status: NEW → ASSIGNED
Flags: needinfo?(bas)
Not related to layers.
Component: Graphics: Layers → Graphics
Track for 50+/51+/52+ as this is a graphics regression in pdf viewer.
Comment on attachment 8795326 [details] Bug 1303534: Make sure to pop all clips before grappig the image for the top-level 'layer'. Can we get a test for this issue too?
Flags: needinfo?(bas)
Comment on attachment 8795326 [details] Bug 1303534: Make sure to pop all clips before grappig the image for the top-level 'layer'. https://reviewboard.mozilla.org/r/81416/#review80078 Please add a test.
Attachment #8795326 - Flags: review?(jmuizelaar) → review+
Pushed by bschouten@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/5a793218e7ab Make sure to pop all clips before grappig the image for the top-level 'layer'. r=jrmuizel
Whiteboard: [mozfr-community]
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
Test is missing. Is it intended or covered in another bug report?
Pushed by bschouten@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/f325ed1abef1 Test: Add test verifying clipping and complex blend modes combine correctly. r=jrmuizel
(In reply to Loic from comment #10) > Test is missing. Is it intended or covered in another bug report? It was tricky to figure out how to write the test, this bug requires a very specific set of circumstances. I didn't want to delay landing the fix. The test, however useless it probably is, has been pushed.
Flags: needinfo?(bas)
Working great here! Bas, can you please request Aurora/Beta approval on this when you get a chance? :)
Status: RESOLVED → VERIFIED
Flags: in-testsuite? → in-testsuite+
Comment on attachment 8795326 [details] Bug 1303534: Make sure to pop all clips before grappig the image for the top-level 'layer'. Approval Request Comment [Feature/regressing bug #]: 1258168 [User impact if declined]: Incorrect drawing on canvas with complex operators [Describe test coverage new/current, TreeHerder]: Nightly testing [Risks and why]: Low, we already pop all clips in other situations. [String/UUID change made/needed]: None
Flags: needinfo?(bas)
Attachment #8795326 - Flags: approval-mozilla-beta?
Attachment #8795326 - Flags: approval-mozilla-aurora?
Hello Loic, could you please verify this issue is fixed as expected on a latest Nightly build? Thanks!
Flags: needinfo?(epinal99-bugzilla2)
Comment on attachment 8795326 [details] Bug 1303534: Make sure to pop all clips before grappig the image for the top-level 'layer'. Fix was verified on Nightly52, Aurora51+, Beta50+
Attachment #8795326 - Flags: approval-mozilla-beta?
Attachment #8795326 - Flags: approval-mozilla-beta+
Attachment #8795326 - Flags: approval-mozilla-aurora?
Attachment #8795326 - Flags: approval-mozilla-aurora+
(In reply to Ritu Kothari (:ritu) from comment #17) > Hello Loic, could you please verify this issue is fixed as expected on a > latest Nightly build? Thanks! I already tested this weekend, both PDFs (BMO and Github) don't have the bug anymore. The reftest is fixed too, it's lime instead of white.
Flags: needinfo?(epinal99-bugzilla2)
Depends on: 1336572
Depends on: 1336591
Depends on: 1396425
Regressions: 1649748
Regressions: 1642583
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: