Bug 1303534: Make sure to pop all clips before grappig the image for the top-level 'layer'. r=jrmuizel

MozReview-Commit-ID: 2nHV0v7MInD